// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrowdsaleEndTime Rendering should render CrowdsaleEndTime component 1`] = `
<div
  className="sw-InputField "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      End Time
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Date and time when the tier ends. Can be only in the future.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={false}
    id="tiers[0].endTime"
    name="tiers[0].endTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1521716400000}
  />
</div>
`;

exports[`CrowdsaleEndTime Rendering should render CrowdsaleEndTime component if field is disabled 1`] = `
<div
  className="sw-InputField "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      End Time
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Date and time when the tier ends. Can be only in the future.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={true}
    id="tiers[0].endTime"
    name="tiers[0].endTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1521716400000}
  />
</div>
`;
